--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,5 +1,5 @@
-FROM ubuntu:16.04
-MAINTAINER viking617617@gmail.com
+FROM        ubuntu:16.04
+MAINTAINER  viking617617@gmail.com
 
 RUN         apt-get -y update
 RUN         apt-get -y dist-upgrade
@@ -18,7 +18,7 @@ RUN         pyenv install 3.6.3
 
 # zsh
 RUN         apt-get install -y zsh
-RUN         curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh
+RUN         wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh || true
 RUN         chsh -s /usr/bin/zsh
 
 # pyenv settings
