--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -2,6 +2,7 @@ FROM        viking617/base
 MAINTAINER  viking617617@gmail.com
 
 ENV         LANG C.UTF-8
+ENV         DJANGO_SETTINGS_MODULE config.settings.local
 
 # 파일 복사 및 requirements설치
 COPY        . /srv/app
@@ -14,9 +15,9 @@ WORKDIR     /srv/app
 RUN         pyenv local app
 
 # Nginx
-RUN        cp /srv/app/.config/nginx/nginx.conf \
+RUN        cp /srv/app/.config/local/nginx/nginx.conf \
                 /etc/nginx/nginx.conf
-RUN        cp /srv/app/.config/nginx/app.conf \
+RUN        cp /srv/app/.config/local/nginx/app.conf \
                 /etc/nginx/sites-available/
 RUN         rm -rf /etc/nginx/sites-enabled/*
 RUN         ln -sf /etc/nginx/sites-available/app.conf \
@@ -26,8 +27,15 @@ RUN         ln -sf /etc/nginx/sites-available/app.conf \
 # uWSGI
 RUN         mkdir -p /var/log/uwsgi/app
 
+
+# manage.py
+WORKDIR     /srv/app/mysite
+RUN         /root/.pyenv/versions/app/bin/python manage.py collectstatic --noinput
+RUN         /root/.pyenv/versions/app/bin/python manage.py migrate --noinput
+
+
 # supervisor
-RUN         cp /srv/app/.config/supervisor/* \
+RUN         cp /srv/app/.config/local/supervisor/* \
                 /etc/supervisor/conf.d/
 CMD         supervisord -n
 
